# WaveFunctionCollapse

./: LICENSE  exampleRules.txt  meson.build
include/: wave.hpp  wave_input_data.hpp  wfc.hpp
source/: main.cpp  wave.cpp  wave_input_data.cpp
utils/: array2D.hpp  dynamic_bitset.cpp  dynamic_bitset.hpp  linked_list.hpp
